external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_non_type_field.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_non_type_field.move:3:27
  │
3 │     public struct Foo(Not a type)
  │                      -    ^ Expected ')'
  │                      │     
  │                      To match this '('

